[package]
authors = ["Gedweb <inbox@gedweb.name>"]
name = "gfcgi"
version = "0.4.4"
keywords = ["FastCGI", "fcgi", "http", "https"]
readme = "README.md"
license-file = "LICENSE"
description = "Native Rust library for FastCGI with multithreading and multiplexing support"
documentation = "http://gedweb.github.io/rust-gfcgi/gfcgi/"
repository = "https://github.com/Gedweb/rust-gfcgi.git"
exclude = [
    ".project",
    ".settings/*",
    "rustfmt.toml",
]

[[bin]]
name = "gfcgi"
path = "example/main.rs"
doc = false

[lib]
name = "gfcgi"

[features]
spawn = []

[dependencies]
byteorder = "^0.5.3"

